# ats-sdk

./: .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  release-please-config.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
ats-proof-tools/: CHANGELOG.md  Cargo.toml  Dockerfile  index.html  nginx.conf
ats-proof-tools/src/: app.rs  creator.rs  form.rs  main.rs  proof.rs  verify.rs
ats-proof-tools/style/: main.css
ats-sdk/: CHANGELOG.md  Cargo.toml
ats-sdk/src/: canonical.rs  commitment.rs  error.rs  hash.rs  lib.rs  merkle.rs  model.rs  validate.rs
pallet-ats/: CHANGELOG.md  Cargo.toml
pallet-ats-primitives/: CHANGELOG.md  Cargo.toml
pallet-ats-primitives/src/: lib.rs
pallet-ats/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallet-ats/src/migrations/: mod.rs  v1.rs  v2.rs
src/: commitment.rs  hash.rs  lib.rs
tests/: integration.rs
