[package]
name = "ats-sdk"
version = "0.1.0"
edition = "2021"
description = "Allfeat Timestamp Service SDK — Reference implementation"
license = "MIT"
repository = "https://github.com/Allfeat/ats-sdk"
keywords = ["blockchain", "timestamp", "merkle", "commitment", "allfeat"]
categories = ["cryptography", "authentication"]

[dependencies]
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
hex-literal = "0.4"
