[package]
name = "ats-proof-tools"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "ATS Web — Proof of ownership and verification for the Allfeat Timestamp Service"

[dependencies]
ats-sdk = { path = "../ats-sdk" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "DomTokenList",
    "Element",
    "File",
    "FileList",
    "HtmlElement",
    "HtmlInputElement",
    "MediaQueryList",
    "Storage",
    "Url",
    "Window",
]
