[package]
name = "ats-sdk"
version = "0.1.2"
edition = "2024"
description = "Allfeat Timestamp Service SDK — Reference implementation"
license = "MIT"
repository = "https://github.com/Allfeat/ats-sdk"
keywords = ["blockchain", "timestamp", "merkle", "commitment", "allfeat"]
categories = ["cryptography", "authentication"]

[features]
default = ["std"]
std = ["sha2/std", "thiserror/std"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
hex-literal = "0.4"
