[package]
name = "pallet-ats-primitives"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Allfeat/ats-sdk"
description = "Shared primitive types for the Allfeat Timestamp Service (ATS) pallet"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
]
