[package]
name = "pallet-ats"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Allfeat/ats-sdk"
description = "Substrate pallet for the Allfeat Timestamp Service (ATS)"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame-support = { version = "45.0", default-features = false }
frame-system = { version = "45.0", default-features = false }
frame-benchmarking = { version = "45.0", default-features = false, optional = true }

[dev-dependencies]
sp-io = { version = "44.0", default-features = false, features = ["std"] }
sp-runtime = { version = "45.0", default-features = false, features = ["std"] }
pallet-balances = { version = "46.0", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
