[package]
name = "pallet-ats"
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Allfeat/ats-sdk"
description = "Substrate pallet for the Allfeat Timestamp Service (ATS)"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame-support = { version = "45.0", default-features = false }
frame-system = { version = "45.0", default-features = false }
frame-benchmarking = { version = "45.0", default-features = false, optional = true }
sp-runtime = { version = "45.0", default-features = false }
log = { version = "0.4", default-features = false }
pallet-ats-primitives = { path = "../pallet-ats-primitives", default-features = false }

[dev-dependencies]
sp-io = { version = "44.0", default-features = false, features = ["std"] }
sp-runtime = { version = "45.0", default-features = false, features = ["std"] }
pallet-balances = { version = "46.0", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"sp-runtime/std",
	"pallet-ats-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
