[package]
name = "pallet-ats"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Allfeat/ats-sdk"
description = "Substrate pallet for the Allfeat Timestamp Service (ATS)"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame = { package = "polkadot-sdk-frame", version = "0.15.0", default-features = false }
log = { version = "0.4", default-features = false }
pallet-ats-primitives = { path = "../pallet-ats-primitives", version = "0.1.0", default-features = false }

[dev-dependencies]
pallet-balances = { version = "47.0.0", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame/std",
	# `frame`'s `std` pulls in its `runtime::apis` module, which only links its
	# api crates (sp-api, sp-block-builder, …) under the `runtime` feature.
	"frame/runtime",
	"log/std",
	"pallet-ats-primitives/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
]
